// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTrack process a list of tiles for rendering a track using config options {
  startX: 100,
  startY: 100,
  startAngle: 45,
  hPadding: 10,
  vPadding: 20
} 1`] = `
{
  "height": 395.56349186104046,
  "tiles": [
    {
      "angle": 45,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 45,
          "x": 100,
          "y": 100,
        },
        "output": {
          "angle": 45,
          "x": 22.218254069479784,
          "y": 177.78174593052023,
        },
        "width": 141.4213562373095,
        "x": -9.601551083914856,
        "y": 68.18019484660536,
      },
      "type": "straight-tile",
      "x": 100,
      "y": 100,
    },
    {
      "angle": 45,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 92.92893218813452,
        "input": {
          "angle": 45,
          "x": 22.218254069479784,
          "y": 177.78174593052023,
        },
        "output": {
          "angle": 135,
          "x": -55.56349186104045,
          "y": 177.78174593052023,
        },
        "width": 141.42135623730948,
        "x": -87.38329701443506,
        "y": 145.9619407771256,
      },
      "type": "curved-tile",
      "x": 22.218254069479784,
      "y": 177.78174593052023,
    },
    {
      "angle": 135,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 135,
          "x": -55.56349186104045,
          "y": 177.78174593052023,
        },
        "output": {
          "angle": 135,
          "x": -133.3452377915607,
          "y": 100.00000000000001,
        },
        "width": 141.42135623730948,
        "x": -165.1650429449553,
        "y": 68.18019484660537,
      },
      "type": "straight-tile",
      "x": -55.56349186104045,
      "y": 177.78174593052023,
    },
    {
      "angle": 135,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 135,
          "x": -133.3452377915607,
          "y": 100.00000000000001,
        },
        "output": {
          "angle": 225,
          "x": -133.3452377915607,
          "y": 22.218254069479798,
        },
        "width": 92.92893218813452,
        "x": -194.45436482630058,
        "y": -9.601551083914842,
      },
      "type": "curved-tile",
      "x": -133.3452377915607,
      "y": 100.00000000000001,
    },
    {
      "angle": 225,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 225,
          "x": -133.3452377915607,
          "y": 22.218254069479798,
        },
        "output": {
          "angle": 225,
          "x": -55.563491861040475,
          "y": -55.56349186104045,
        },
        "width": 141.4213562373095,
        "x": -165.16504294495533,
        "y": -87.38329701443509,
      },
      "type": "straight-tile",
      "x": -133.3452377915607,
      "y": 22.218254069479798,
    },
    {
      "angle": 225,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 92.92893218813454,
        "input": {
          "angle": 225,
          "x": -55.563491861040475,
          "y": -55.56349186104045,
        },
        "output": {
          "angle": 315,
          "x": 22.218254069479755,
          "y": -55.56349186104046,
        },
        "width": 141.4213562373095,
        "x": -87.38329701443513,
        "y": -116.67261889578035,
      },
      "type": "curved-tile",
      "x": -55.563491861040475,
      "y": -55.56349186104045,
    },
    {
      "angle": 315,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.42135623730948,
        "input": {
          "angle": 315,
          "x": 22.218254069479755,
          "y": -55.56349186104046,
        },
        "output": {
          "angle": 315,
          "x": 100,
          "y": 22.21825406947974,
        },
        "width": 141.42135623730948,
        "x": -9.601551083914874,
        "y": -87.3832970144351,
      },
      "type": "straight-tile",
      "x": 22.218254069479755,
      "y": -55.56349186104046,
    },
    {
      "angle": 315,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 315,
          "x": 100,
          "y": 22.21825406947974,
        },
        "output": {
          "angle": 45,
          "x": 100.00000000000003,
          "y": 99.99999999999997,
        },
        "width": 92.92893218813454,
        "x": 68.18019484660537,
        "y": -9.601551083914906,
      },
      "type": "curved-tile",
      "x": 100,
      "y": 22.21825406947974,
    },
  ],
  "width": 375.56349186104046,
  "x": -204.45436482630058,
  "y": -136.67261889578035,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options { hPadding: 10, vPadding: 20 } 1`] = `
{
  "height": 350,
  "tiles": [
    {
      "angle": 0,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 0,
          "x": 0,
          "y": 110,
        },
        "width": 90,
        "x": -45,
        "y": 0,
      },
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
    {
      "angle": 0,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 110,
        },
        "output": {
          "angle": 90,
          "x": -55,
          "y": 165,
        },
        "width": 100,
        "x": -55,
        "y": 110,
      },
      "type": "curved-tile",
      "x": 0,
      "y": 110,
    },
    {
      "angle": 90,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 90,
        "input": {
          "angle": 90,
          "x": -55,
          "y": 165,
        },
        "output": {
          "angle": 90,
          "x": -165,
          "y": 165,
        },
        "width": 110,
        "x": -165,
        "y": 120,
      },
      "type": "straight-tile",
      "x": -55,
      "y": 165,
    },
    {
      "angle": 90,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 90,
          "x": -165,
          "y": 165,
        },
        "output": {
          "angle": 180,
          "x": -220,
          "y": 110,
        },
        "width": 100,
        "x": -265,
        "y": 110,
      },
      "type": "curved-tile",
      "x": -165,
      "y": 165,
    },
    {
      "angle": 180,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 180,
          "x": -220,
          "y": 110,
        },
        "output": {
          "angle": 180,
          "x": -220,
          "y": 0,
        },
        "width": 90,
        "x": -265,
        "y": 0,
      },
      "type": "straight-tile",
      "x": -220,
      "y": 110,
    },
    {
      "angle": 180,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 180,
          "x": -220,
          "y": 0,
        },
        "output": {
          "angle": 270,
          "x": -165,
          "y": -55.00000000000001,
        },
        "width": 100,
        "x": -265,
        "y": -100,
      },
      "type": "curved-tile",
      "x": -220,
      "y": 0,
    },
    {
      "angle": 270,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 90.00000000000003,
        "input": {
          "angle": 270,
          "x": -165,
          "y": -55.00000000000001,
        },
        "output": {
          "angle": 270,
          "x": -55,
          "y": -55.00000000000003,
        },
        "width": 110.00000000000001,
        "x": -165,
        "y": -100.00000000000003,
      },
      "type": "straight-tile",
      "x": -165,
      "y": -55.00000000000001,
    },
    {
      "angle": 270,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 270,
          "x": -55,
          "y": -55.00000000000003,
        },
        "output": {
          "angle": 0,
          "x": 7.105427357601002e-15,
          "y": -3.552713678800501e-14,
        },
        "width": 100.00000000000003,
        "x": -55.00000000000001,
        "y": -100.00000000000003,
      },
      "type": "curved-tile",
      "x": -55,
      "y": -55.00000000000003,
    },
  ],
  "width": 330,
  "x": -275,
  "y": -120.00000000000003,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options { startAngle: 45 } 1`] = `
{
  "height": 355.56349186104046,
  "tiles": [
    {
      "angle": 45,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 45,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 45,
          "x": -77.78174593052022,
          "y": 77.78174593052023,
        },
        "width": 141.4213562373095,
        "x": -109.60155108391486,
        "y": -31.819805153394636,
      },
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
    {
      "angle": 45,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 92.92893218813452,
        "input": {
          "angle": 45,
          "x": -77.78174593052022,
          "y": 77.78174593052023,
        },
        "output": {
          "angle": 135,
          "x": -155.56349186104046,
          "y": 77.78174593052023,
        },
        "width": 141.42135623730948,
        "x": -187.38329701443507,
        "y": 45.961940777125584,
      },
      "type": "curved-tile",
      "x": -77.78174593052022,
      "y": 77.78174593052023,
    },
    {
      "angle": 135,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 135,
          "x": -155.56349186104046,
          "y": 77.78174593052023,
        },
        "output": {
          "angle": 135,
          "x": -233.3452377915607,
          "y": 1.4210854715202004e-14,
        },
        "width": 141.42135623730948,
        "x": -265.1650429449553,
        "y": -31.819805153394626,
      },
      "type": "straight-tile",
      "x": -155.56349186104046,
      "y": 77.78174593052023,
    },
    {
      "angle": 135,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 135,
          "x": -233.3452377915607,
          "y": 1.4210854715202004e-14,
        },
        "output": {
          "angle": 225,
          "x": -233.3452377915607,
          "y": -77.78174593052022,
        },
        "width": 92.9289321881345,
        "x": -294.45436482630055,
        "y": -109.60155108391484,
      },
      "type": "curved-tile",
      "x": -233.3452377915607,
      "y": 1.4210854715202004e-14,
    },
    {
      "angle": 225,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 225,
          "x": -233.3452377915607,
          "y": -77.78174593052022,
        },
        "output": {
          "angle": 225,
          "x": -155.56349186104046,
          "y": -155.56349186104046,
        },
        "width": 141.42135623730954,
        "x": -265.16504294495536,
        "y": -187.3832970144351,
      },
      "type": "straight-tile",
      "x": -233.3452377915607,
      "y": -77.78174593052022,
    },
    {
      "angle": 225,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 92.92893218813452,
        "input": {
          "angle": 225,
          "x": -155.56349186104046,
          "y": -155.56349186104046,
        },
        "output": {
          "angle": 315,
          "x": -77.78174593052023,
          "y": -155.56349186104046,
        },
        "width": 141.4213562373095,
        "x": -187.3832970144351,
        "y": -216.67261889578035,
      },
      "type": "curved-tile",
      "x": -155.56349186104046,
      "y": -155.56349186104046,
    },
    {
      "angle": 315,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.42135623730948,
        "input": {
          "angle": 315,
          "x": -77.78174593052023,
          "y": -155.56349186104046,
        },
        "output": {
          "angle": 315,
          "x": 1.4210854715202004e-14,
          "y": -77.78174593052026,
        },
        "width": 141.4213562373095,
        "x": -109.60155108391486,
        "y": -187.3832970144351,
      },
      "type": "straight-tile",
      "x": -77.78174593052023,
      "y": -155.56349186104046,
    },
    {
      "angle": 315,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 315,
          "x": 1.4210854715202004e-14,
          "y": -77.78174593052026,
        },
        "output": {
          "angle": 45,
          "x": 3.552713678800501e-14,
          "y": -2.842170943040401e-14,
        },
        "width": 92.92893218813452,
        "x": -31.819805153394615,
        "y": -109.6015510839149,
      },
      "type": "curved-tile",
      "x": 1.4210854715202004e-14,
      "y": -77.78174593052026,
    },
  ],
  "width": 355.56349186104046,
  "x": -294.45436482630055,
  "y": -216.67261889578035,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options { startX: 100, startY: 100 } 1`] = `
{
  "height": 310,
  "tiles": [
    {
      "angle": 0,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 0,
          "x": 100,
          "y": 100,
        },
        "output": {
          "angle": 0,
          "x": 100,
          "y": 210,
        },
        "width": 90,
        "x": 55,
        "y": 100,
      },
      "type": "straight-tile",
      "x": 100,
      "y": 100,
    },
    {
      "angle": 0,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 0,
          "x": 100,
          "y": 210,
        },
        "output": {
          "angle": 90,
          "x": 45,
          "y": 265,
        },
        "width": 100,
        "x": 45,
        "y": 210,
      },
      "type": "curved-tile",
      "x": 100,
      "y": 210,
    },
    {
      "angle": 90,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 90,
        "input": {
          "angle": 90,
          "x": 45,
          "y": 265,
        },
        "output": {
          "angle": 90,
          "x": -65,
          "y": 265,
        },
        "width": 110,
        "x": -65,
        "y": 220,
      },
      "type": "straight-tile",
      "x": 45,
      "y": 265,
    },
    {
      "angle": 90,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 90,
          "x": -65,
          "y": 265,
        },
        "output": {
          "angle": 180,
          "x": -120,
          "y": 210,
        },
        "width": 100,
        "x": -165,
        "y": 210,
      },
      "type": "curved-tile",
      "x": -65,
      "y": 265,
    },
    {
      "angle": 180,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 180,
          "x": -120,
          "y": 210,
        },
        "output": {
          "angle": 180,
          "x": -120.00000000000001,
          "y": 100,
        },
        "width": 90,
        "x": -165,
        "y": 100,
      },
      "type": "straight-tile",
      "x": -120,
      "y": 210,
    },
    {
      "angle": 180,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 180,
          "x": -120.00000000000001,
          "y": 100,
        },
        "output": {
          "angle": 270,
          "x": -65.00000000000003,
          "y": 44.99999999999999,
        },
        "width": 100,
        "x": -165.00000000000003,
        "y": 0,
      },
      "type": "curved-tile",
      "x": -120.00000000000001,
      "y": 100,
    },
    {
      "angle": 270,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 90.00000000000003,
        "input": {
          "angle": 270,
          "x": -65.00000000000003,
          "y": 44.99999999999999,
        },
        "output": {
          "angle": 270,
          "x": 44.99999999999997,
          "y": 44.99999999999997,
        },
        "width": 110.00000000000003,
        "x": -65.00000000000004,
        "y": -2.842170943040401e-14,
      },
      "type": "straight-tile",
      "x": -65.00000000000003,
      "y": 44.99999999999999,
    },
    {
      "angle": 270,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 270,
          "x": 44.99999999999997,
          "y": 44.99999999999997,
        },
        "output": {
          "angle": 0,
          "x": 99.99999999999997,
          "y": 99.99999999999997,
        },
        "width": 100.00000000000003,
        "x": 44.999999999999964,
        "y": -2.842170943040401e-14,
      },
      "type": "curved-tile",
      "x": 44.99999999999997,
      "y": 44.99999999999997,
    },
  ],
  "width": 310,
  "x": -165.00000000000003,
  "y": -2.842170943040401e-14,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options { startX: 100, startY: 100, startAngle: 45 } 1`] = `
{
  "height": 355.56349186104046,
  "tiles": [
    {
      "angle": 45,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 45,
          "x": 100,
          "y": 100,
        },
        "output": {
          "angle": 45,
          "x": 22.218254069479784,
          "y": 177.78174593052023,
        },
        "width": 141.4213562373095,
        "x": -9.601551083914856,
        "y": 68.18019484660536,
      },
      "type": "straight-tile",
      "x": 100,
      "y": 100,
    },
    {
      "angle": 45,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 92.92893218813452,
        "input": {
          "angle": 45,
          "x": 22.218254069479784,
          "y": 177.78174593052023,
        },
        "output": {
          "angle": 135,
          "x": -55.56349186104045,
          "y": 177.78174593052023,
        },
        "width": 141.42135623730948,
        "x": -87.38329701443506,
        "y": 145.9619407771256,
      },
      "type": "curved-tile",
      "x": 22.218254069479784,
      "y": 177.78174593052023,
    },
    {
      "angle": 135,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 135,
          "x": -55.56349186104045,
          "y": 177.78174593052023,
        },
        "output": {
          "angle": 135,
          "x": -133.3452377915607,
          "y": 100.00000000000001,
        },
        "width": 141.42135623730948,
        "x": -165.1650429449553,
        "y": 68.18019484660537,
      },
      "type": "straight-tile",
      "x": -55.56349186104045,
      "y": 177.78174593052023,
    },
    {
      "angle": 135,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 135,
          "x": -133.3452377915607,
          "y": 100.00000000000001,
        },
        "output": {
          "angle": 225,
          "x": -133.3452377915607,
          "y": 22.218254069479798,
        },
        "width": 92.92893218813452,
        "x": -194.45436482630058,
        "y": -9.601551083914842,
      },
      "type": "curved-tile",
      "x": -133.3452377915607,
      "y": 100.00000000000001,
    },
    {
      "angle": 225,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 225,
          "x": -133.3452377915607,
          "y": 22.218254069479798,
        },
        "output": {
          "angle": 225,
          "x": -55.563491861040475,
          "y": -55.56349186104045,
        },
        "width": 141.4213562373095,
        "x": -165.16504294495533,
        "y": -87.38329701443509,
      },
      "type": "straight-tile",
      "x": -133.3452377915607,
      "y": 22.218254069479798,
    },
    {
      "angle": 225,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 92.92893218813454,
        "input": {
          "angle": 225,
          "x": -55.563491861040475,
          "y": -55.56349186104045,
        },
        "output": {
          "angle": 315,
          "x": 22.218254069479755,
          "y": -55.56349186104046,
        },
        "width": 141.4213562373095,
        "x": -87.38329701443513,
        "y": -116.67261889578035,
      },
      "type": "curved-tile",
      "x": -55.563491861040475,
      "y": -55.56349186104045,
    },
    {
      "angle": 315,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.42135623730948,
        "input": {
          "angle": 315,
          "x": 22.218254069479755,
          "y": -55.56349186104046,
        },
        "output": {
          "angle": 315,
          "x": 100,
          "y": 22.21825406947974,
        },
        "width": 141.42135623730948,
        "x": -9.601551083914874,
        "y": -87.3832970144351,
      },
      "type": "straight-tile",
      "x": 22.218254069479755,
      "y": -55.56349186104046,
    },
    {
      "angle": 315,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 141.4213562373095,
        "input": {
          "angle": 315,
          "x": 100,
          "y": 22.21825406947974,
        },
        "output": {
          "angle": 45,
          "x": 100.00000000000003,
          "y": 99.99999999999997,
        },
        "width": 92.92893218813454,
        "x": 68.18019484660537,
        "y": -9.601551083914906,
      },
      "type": "curved-tile",
      "x": 100,
      "y": 22.21825406947974,
    },
  ],
  "width": 355.56349186104046,
  "x": -194.45436482630058,
  "y": -116.67261889578035,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using config options {} 1`] = `
{
  "height": 310,
  "tiles": [
    {
      "angle": 0,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 0,
          "x": 0,
          "y": 110,
        },
        "width": 90,
        "x": -45,
        "y": 0,
      },
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
    {
      "angle": 0,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 110,
        },
        "output": {
          "angle": 90,
          "x": -55,
          "y": 165,
        },
        "width": 100,
        "x": -55,
        "y": 110,
      },
      "type": "curved-tile",
      "x": 0,
      "y": 110,
    },
    {
      "angle": 90,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 90,
        "input": {
          "angle": 90,
          "x": -55,
          "y": 165,
        },
        "output": {
          "angle": 90,
          "x": -165,
          "y": 165,
        },
        "width": 110,
        "x": -165,
        "y": 120,
      },
      "type": "straight-tile",
      "x": -55,
      "y": 165,
    },
    {
      "angle": 90,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 90,
          "x": -165,
          "y": 165,
        },
        "output": {
          "angle": 180,
          "x": -220,
          "y": 110,
        },
        "width": 100,
        "x": -265,
        "y": 110,
      },
      "type": "curved-tile",
      "x": -165,
      "y": 165,
    },
    {
      "angle": 180,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 180,
          "x": -220,
          "y": 110,
        },
        "output": {
          "angle": 180,
          "x": -220,
          "y": 0,
        },
        "width": 90,
        "x": -265,
        "y": 0,
      },
      "type": "straight-tile",
      "x": -220,
      "y": 110,
    },
    {
      "angle": 180,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 180,
          "x": -220,
          "y": 0,
        },
        "output": {
          "angle": 270,
          "x": -165,
          "y": -55.00000000000001,
        },
        "width": 100,
        "x": -265,
        "y": -100,
      },
      "type": "curved-tile",
      "x": -220,
      "y": 0,
    },
    {
      "angle": 270,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 90.00000000000003,
        "input": {
          "angle": 270,
          "x": -165,
          "y": -55.00000000000001,
        },
        "output": {
          "angle": 270,
          "x": -55,
          "y": -55.00000000000003,
        },
        "width": 110.00000000000001,
        "x": -165,
        "y": -100.00000000000003,
      },
      "type": "straight-tile",
      "x": -165,
      "y": -55.00000000000001,
    },
    {
      "angle": 270,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 270,
          "x": -55,
          "y": -55.00000000000003,
        },
        "output": {
          "angle": 0,
          "x": 7.105427357601002e-15,
          "y": -3.552713678800501e-14,
        },
        "width": 100.00000000000003,
        "x": -55.00000000000001,
        "y": -100.00000000000003,
      },
      "type": "curved-tile",
      "x": -55,
      "y": -55.00000000000003,
    },
  ],
  "width": 310,
  "x": -265,
  "y": -100.00000000000003,
}
`;

exports[`buildTrack process a list of tiles for rendering a track using default position 1`] = `
{
  "height": 310,
  "tiles": [
    {
      "angle": 0,
      "direction": "right",
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 0,
          "x": 0,
          "y": 110,
        },
        "width": 90,
        "x": -45,
        "y": 0,
      },
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
    {
      "angle": 0,
      "direction": "right",
      "id": "id-1",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 110,
        },
        "output": {
          "angle": 90,
          "x": -55,
          "y": 165,
        },
        "width": 100,
        "x": -55,
        "y": 110,
      },
      "type": "curved-tile",
      "x": 0,
      "y": 110,
    },
    {
      "angle": 90,
      "direction": "right",
      "id": "id-2",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 90,
        "input": {
          "angle": 90,
          "x": -55,
          "y": 165,
        },
        "output": {
          "angle": 90,
          "x": -165,
          "y": 165,
        },
        "width": 110,
        "x": -165,
        "y": 120,
      },
      "type": "straight-tile",
      "x": -55,
      "y": 165,
    },
    {
      "angle": 90,
      "direction": "right",
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 90,
          "x": -165,
          "y": 165,
        },
        "output": {
          "angle": 180,
          "x": -220,
          "y": 110,
        },
        "width": 100,
        "x": -265,
        "y": 110,
      },
      "type": "curved-tile",
      "x": -165,
      "y": 165,
    },
    {
      "angle": 180,
      "direction": "right",
      "id": "id-4",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 180,
          "x": -220,
          "y": 110,
        },
        "output": {
          "angle": 180,
          "x": -220,
          "y": 0,
        },
        "width": 90,
        "x": -265,
        "y": 0,
      },
      "type": "straight-tile",
      "x": -220,
      "y": 110,
    },
    {
      "angle": 180,
      "direction": "right",
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 180,
          "x": -220,
          "y": 0,
        },
        "output": {
          "angle": 270,
          "x": -165,
          "y": -55.00000000000001,
        },
        "width": 100,
        "x": -265,
        "y": -100,
      },
      "type": "curved-tile",
      "x": -220,
      "y": 0,
    },
    {
      "angle": 270,
      "direction": "right",
      "id": "id-6",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 90.00000000000003,
        "input": {
          "angle": 270,
          "x": -165,
          "y": -55.00000000000001,
        },
        "output": {
          "angle": 270,
          "x": -55,
          "y": -55.00000000000003,
        },
        "width": 110.00000000000001,
        "x": -165,
        "y": -100.00000000000003,
      },
      "type": "straight-tile",
      "x": -165,
      "y": -55.00000000000001,
    },
    {
      "angle": 270,
      "direction": "right",
      "id": "id-7",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-7",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 270,
          "x": -55,
          "y": -55.00000000000003,
        },
        "output": {
          "angle": 0,
          "x": 7.105427357601002e-15,
          "y": -3.552713678800501e-14,
        },
        "width": 100.00000000000003,
        "x": -55.00000000000001,
        "y": -100.00000000000003,
      },
      "type": "curved-tile",
      "x": -55,
      "y": -55.00000000000003,
    },
  ],
  "width": 310,
  "x": -265,
  "y": -100.00000000000003,
}
`;
